# cv-project-atom

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
expense_tracker/: config.py
expense_tracker/analytics/: anomalies.py  budgets.py  pivot.py  recurring.py
expense_tracker/categorize/: learn.py  llm.py  rules.py
expense_tracker/db/: connection.py  schema.sql  seed.sql
expense_tracker/fx/: rates.py
expense_tracker/ingest/: pipeline.py
expense_tracker/parsers/: __init__.py  base.py
expense_tracker/parsers/csv/: kaspi.py
expense_tracker/parsers/pdf/: extract.py  freedom.py
expense_tracker/ui/: format.py  streamlit_app.py
expense_tracker/ui/tabs/: fx_tab.py  import_tab.py  insights_tab.py  pivot_tab.py  rules_tab.py  trends_tab.py
tests/: conftest.py  test_analytics.py  test_budgets.py  test_categorize.py  test_fx.py  test_loaders.py  test_parsers.py  test_ui_format.py  test_ui_import.py
